force-app/main/default/objects/Correction_Devis__c/Correction_Devis__c.object-meta.xml
<CustomObject>
    <description>Ligne de correction de devis liée à une instruction PEC (bloc « Données devis corrigé »).</description>
    <label>Correction Devis</label>
    <nameField>
        <displayFormat>CD-{00000}</displayFormat>
        <label>N° Correction</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Corrections Devis</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>