force-app/main/default/objects/Correction_Devis__c/fields/DateStatut__c.field-meta.xml
<CustomField>
    <fullName>DateStatut__c</fullName>
    <description>Date système récupérée automatiquement au changement du statut correction (RG8).</description>
    <label>Date statut</label>
    <type>Date</type>
</CustomField>