force-app/main/default/objects/Correction_Devis__c/fields/Instruction__c.field-meta.xml
<CustomField>
    <fullName>Instruction__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Instruction PEC à laquelle la ligne de correction de devis est rattachée.</description>
    <label>Instruction</label>
    <referenceTo>Instruction__c</referenceTo>
    <relationshipLabel>Corrections Devis</relationshipLabel>
    <relationshipName>Corrections_Devis</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>