force-app/main/default/objects/Correction_Devis__c/fields/MontantDevisCorrige__c.field-meta.xml
<CustomField>
    <fullName>MontantDevisCorrige__c</fullName>
    <label>Montant devis corrigé</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>