force-app/main/default/objects/Correction_Devis__c/fields/OrigineCorrection__c.field-meta.xml
<CustomField>
    <fullName>OrigineCorrection__c</fullName>
    <label>Origine correction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Revue en interne</fullName>
            </value>
            <value>
                <fullName>Revue d&apos;expert sur document</fullName>
            </value>
            <value>
                <fullName>Revue d&apos;expert suite à expertise véhicule</fullName>
            </value>
            <value>
                <fullName>Contre-proposition garagiste</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>