force-app/main/default/objects/Correction_Devis__c/fields/Reparateur__c.field-meta.xml
<CustomField>
    <fullName>Reparateur__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Réparateur (Garagiste/Concessionnaire) retenu pour la ligne de correction.</description>
    <label>Réparateur</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Corrections Devis (Réparateur)</relationshipLabel>
    <relationshipName>Corrections_Devis_Reparateur</relationshipName>
    <type>Lookup</type>
</CustomField>