force-app/main/default/objects/Correction_Devis__c/fields/StatutCorrection__c.field-meta.xml
<CustomField>
    <fullName>StatutCorrection__c</fullName>
    <label>Statut correction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Soumise</fullName>
                <default>true</default>
                <label>Soumise</label>
            </value>
            <value>
                <fullName>Confirmée</fullName>
            </value>
            <value>
                <fullName>Refusée</fullName>
            </value>
            <value>
                <fullName>Abandonnée</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>